Fix text-align prop in SunriseStep.Form

--- a/app/components/ui/sunrise-step/form/styles.scss
+++ b/app/components/ui/sunrise-step/form/styles.scss
@@ -10,6 +10,7 @@
 	color: $gray;
 	margin: -40px auto 25px;
 	padding: 30px;
+	text-align: left;
 	width: 400px;
 
 	h3 {
